fix word wrap / break - thanks Casey

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,3 +57,12 @@
   margin-right: 8%;
   max-width: 5% !important;
 }
+
+.btn-primary {
+  width: 100% !important;
+
+}
+
+.well {
+  word-break: break-all !important;
+}
